--- a/exploring_data.ipynb
+++ b/exploring_data.ipynb
@@ -21,6 +21,7 @@
     "import numpy as np\n",
     "import os\n",
     "import sys\n",
+    "sys.path.append('/home/ec2-user/Notebooks/HomeCreditDefaultRisk/Home-Credit-Default-Risk/feature-selector')\n",
     "\n",
     "# feature_selector is a package for finding and selecting the most useful features in a dataset\n",
     "# https://github.com/WillKoehrsen/feature-selector\n",
@@ -3320,6 +3321,97 @@
    ],
    "source": [
     "for t in tables: display(t.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13605401, 8)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1670214, 37)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1716428, 17)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(27299925, 3)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(307511, 123)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3840312, 23)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(48744, 121)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(48744, 2)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(10001358, 8)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "for t in tables: display(t.shape)"
    ]
   },
   {
