--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -9,44 +9,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import pickle\n",
     "import os\n",
     "import gc\n",
-    "import time\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import warnings\n",
-    "warnings.simplefilter(action='ignore', category=FutureWarning)"
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# FE FORK FROM RELEASE KERNEL"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# One-hot encoding for categorical columns with get_dummies\n",
     "def one_hot_encoder(df, nan_as_category = True):\n",
     "    \n",
-    "    '''return\n",
-    "       ------\n",
-    "       df: dataframe with OHE on categorical columns\n",
-    "       new_columns: list of OHE name columns\n",
+    "    '''\n",
+    "    \n",
+    "    return\n",
+    "    ------\n",
+    "    df: dataframe with OHE on categorical columns\n",
+    "    new_columns: list of OHE name columns\n",
+    "    \n",
     "    '''\n",
     "    \n",
     "    original_columns = list(df.columns)\n",
@@ -58,28 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DATA_PATH = '../HomeCreditDefaultRisk/Data'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocess application_train.csv and application_test.csv\n",
     "\n",
-    "def application_train_test(nan_as_category = False, limit=None):\n",
-    "    \n",
-    "    # Read data\n",
-    "    df = pd.read_csv(os.path.join(DATA_PATH, 'application_train.csv.zip'), nrows=limit)\n",
-    "    test_df = pd.read_csv(os.path.join(DATA_PATH, 'application_test.csv.zip'), nrows=limit)\n",
-    "    \n",
-    "    print(\"Train samples: {}, test samples: {}\".format(len(df), len(test_df)))\n",
+    "def application_train_test(df, test_df, nan_as_category = False, limit=None):\n",
     "    \n",
     "    # Merge\n",
     "    df = df.append(test_df).reset_index()\n",
@@ -87,6 +61,11 @@
     "    # Optional: Remove 4 applications with XNA CODE_GENDER (train set)\n",
     "    df = df[df['CODE_GENDER'] != 'XNA']\n",
     "    \n",
+    "    # Dummy 1 if missing value >= 35, 0 otherwise\n",
+    "    # Median of the serie : 36\n",
+    "    df['incomplete'] = 1\n",
+    "    df.loc[df.isnull().sum(axis=1) < 35, 'incomplete'] = 0 \n",
+    "\n",
     "    docs = [_f for _f in df.columns if 'FLAG_DOC' in _f]\n",
     "    live = [_f for _f in df.columns if ('FLAG_' in _f) & ('FLAG_DOC' not in _f) & ('_FLAG_' not in _f)]\n",
     "    \n",
@@ -127,23 +106,19 @@
     "    'FLAG_DOCUMENT_17','FLAG_DOCUMENT_18','FLAG_DOCUMENT_19',\n",
     "    'FLAG_DOCUMENT_20','FLAG_DOCUMENT_21']\n",
     "    df= df.drop(dropcolum,axis=1)\n",
-    "    del test_df\n",
-    "    gc.collect() # garbage collector\n",
+    "\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocess bureau.csv and bureau_balance.csv\n",
     "\n",
-    "def bureau_and_balance(nan_as_category = True, limit=None):\n",
-    "    \n",
-    "    bureau = pd.read_csv(os.path.join(DATA_PATH,'bureau.csv.zip'), nrows=limit)\n",
-    "    bb = pd.read_csv(os.path.join(DATA_PATH,'bureau_balance.csv.zip'), nrows=limit)\n",
+    "def bureau_and_balance(bureau, bb, nan_as_category = True, limit=None):\n",
     "    \n",
     "    # OHE cat feature\n",
     "    bb, bb_cat = one_hot_encoder(bb, nan_as_category)\n",
@@ -205,23 +180,20 @@
     "    closed_agg.columns = pd.Index(['CLOSED_' + e[0] + \"_\" + e[1].upper() for e in closed_agg.columns.tolist()])\n",
     "    closed_agg = closed_agg.reset_index()\n",
     "    bureau_agg = bureau_agg.merge(closed_agg, how='left', on='SK_ID_CURR')\n",
-    "    del closed, closed_agg, bureau\n",
-    "    gc.collect()\n",
+    "\n",
     "    return bureau_agg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocess previous_applications.csv\n",
     "\n",
-    "def previous_applications(nan_as_category = True, limit=None):\n",
-    "    \n",
-    "    prev = pd.read_csv(os.path.join(DATA_PATH,'previous_application.csv.zip'), nrows=limit)\n",
-    "    \n",
+    "def previous_applications(prev, nan_as_category = True, limit=None):\n",
+    "        \n",
     "    prev, cat_cols = one_hot_encoder(prev, nan_as_category= True)\n",
     "    \n",
     "    # Days 365.243 values -> nan\n",
@@ -269,22 +241,20 @@
     "    refused_agg.columns = pd.Index(['REFUSED_' + e[0] + \"_\" + e[1].upper() for e in refused_agg.columns.tolist()])\n",
     "    refused_agg = refused_agg.reset_index()    \n",
     "    prev_agg = prev_agg.merge(refused_agg, how='left', on='SK_ID_CURR')\n",
-    "    del refused, refused_agg, approved, approved_agg, prev\n",
-    "    gc.collect()\n",
+    "\n",
     "    return prev_agg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocess POS_CASH_balance.csv\n",
     "\n",
-    "def pos_cash(nan_as_category = True, limit=None):\n",
+    "def pos_cash(pos, nan_as_category = True, limit=None):\n",
     "    \n",
-    "    pos = pd.read_csv(os.path.join(DATA_PATH,'POS_CASH_balance.csv.zip'), nrows=limit)\n",
     "    pos, cat_cols = one_hot_encoder(pos, nan_as_category= True)\n",
     "    \n",
     "    # Features\n",
@@ -301,22 +271,20 @@
     "    \n",
     "    # Count pos cash accounts\n",
     "    pos_agg['POS_COUNT'] = pos.groupby('SK_ID_CURR').size()\n",
-    "    del pos\n",
-    "    gc.collect()\n",
+    "\n",
     "    return pos_agg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocess installments_payments.csv\n",
     "\n",
-    "def installments_payments(nan_as_category = True, limit=None):\n",
+    "def installments_payments(ins, nan_as_category = True, limit=None):\n",
     "    \n",
-    "    ins = pd.read_csv(os.path.join(DATA_PATH,'installments_payments.csv.zip'), nrows=limit)\n",
     "    ins, cat_cols = one_hot_encoder(ins, nan_as_category= True)\n",
     "    \n",
     "    # Percentage and difference paid in each installment (amount paid and installment value)\n",
@@ -347,22 +315,20 @@
     "    \n",
     "    # Count installments accounts\n",
     "    ins_agg['INSTAL_COUNT'] = ins.groupby('SK_ID_CURR').size()\n",
-    "    del ins\n",
-    "    gc.collect()\n",
+    "\n",
     "    return ins_agg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocess credit_card_balance.csv\n",
     "\n",
-    "def credit_card_balance(nan_as_category = True, limit=None):\n",
+    "def credit_card_balance(cc, nan_as_category = True, limit=None):\n",
     "    \n",
-    "    cc = pd.read_csv(os.path.join(DATA_PATH,'credit_card_balance.csv.zip'), nrows=limit)\n",
     "    cc, cat_cols = one_hot_encoder(cc, nan_as_category= True)\n",
     "    \n",
     "    # General aggregations\n",
@@ -372,135 +338,8 @@
     "    \n",
     "    # Count credit card lines\n",
     "    cc_agg['CC_COUNT'] = cc.groupby('SK_ID_CURR').size()\n",
-    "    del cc\n",
-    "    gc.collect()\n",
+    "\n",
     "    return cc_agg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train samples: 100000, test samples: 48744\n"
-     ]
-    }
-   ],
-   "source": [
-    "# EXECUTE PREPROCESS\n",
-    "\n",
-    "limit = 100000\n",
-    "\n",
-    "df = application_train_test(nan_as_category = False, limit=limit)\n",
-    "bureau_agg = bureau_and_balance(nan_as_category = True, limit=limit)\n",
-    "prev_agg = previous_applications(nan_as_category = True, limit=limit)\n",
-    "pos_agg = pos_cash(nan_as_category = True, limit=limit)\n",
-    "ins_agg = installments_payments(nan_as_category = True, limit=limit)\n",
-    "cc_agg = credit_card_balance(nan_as_category = True, limit=limit)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pos_agg = pos_agg.reset_index()\n",
-    "ins_agg = ins_agg.reset_index()\n",
-    "cc_agg = cc_agg.reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# MERGE ALL\n",
-    "\n",
-    "df = df.merge(bureau_agg, how='left', on='SK_ID_CURR')\n",
-    "df = df.merge(prev_agg, how='left', on='SK_ID_CURR')\n",
-    "df = df.merge(pos_agg, how='left', on='SK_ID_CURR')\n",
-    "df = df.merge(ins_agg, how='left', on='SK_ID_CURR')\n",
-    "df = df.merge(cc_agg, how='left', on='SK_ID_CURR')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# COUNT ALL MISSING VALUES\n",
-    "\n",
-    "df['COUNT_NAN'] = df.isnull().sum(axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# SPLIT TRAIN AND TEST\n",
-    "\n",
-    "train_df = df[df['TARGET'].notnull()]\n",
-    "test_df = df[df['TARGET'].isnull()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ec2-user/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n",
-      "/home/ec2-user/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  after removing the cwd from sys.path.\n",
-      "/home/ec2-user/anaconda3/lib/python3.6/site-packages/pandas/core/frame.py:3035: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  downcast=downcast, **kwargs)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# FILLNA BY A SINGLE VALUE TO GIVE A SIGNAL\n",
-    "\n",
-    "train_df.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
-    "test_df.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
-    "\n",
-    "train_df.fillna(-1, inplace=True)\n",
-    "test_df.fillna(-1, inplace=True)\n",
-    "\n",
-    "assert train_df.isnull().sum().sum() == test_df.isnull().sum().sum() == 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# DF TO PICLKE\n",
-    "\n",
-    "train_df.to_pickle(os.path.join(DATA_PATH,'train_df.p'))\n",
-    "test_df.to_pickle(os.path.join(DATA_PATH,'test_df.p'))"
    ]
   }
  ],
