add mdifs models

--- a/models.ipynb
+++ b/models.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MODELING"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -57,33 +64,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "B2o8b1d2e1c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "pos_agg = pos_agg.reset_index()\n",
-    "#ins_agg = ins_agg.reset_index()\n",
+    "ins_agg = ins_agg.reset_index()\n",
     "cc_agg = cc_agg.reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# MERGE ALL\n",
     "\n",
-    "def merge(df,bureau_agg,prev_agg,pos_agg,cc_agg):\n",
+    "def merge(df,bureau_agg,prev_agg,ins_agg,pos_agg,cc_agg):\n",
     "    \n",
     "    df = (df\n",
     "           .merge(bureau_agg, how='left', on='SK_ID_CURR')\n",
@@ -104,31 +102,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = merge(df, bureau_agg, prev_agg, pos_agg, cc_agg)"
+    "# Merge all sources\n",
+    "df = merge(df, bureau_agg, prev_agg, ins_agg, pos_agg, cc_agg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SHARE MISSING VALUES\n",
-    "\n",
+    "# Share of mising values\n",
     "df['SHARE_NAN'] = df.isnull().sum(axis=1) / df.shape[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SPLIT TRAIN AND TEST\n",
+    "# Split train and test\n",
     "\n",
     "train_df = df[df['TARGET'].notnull()]\n",
     "test_df = df[df['TARGET'].isnull()]\n",
@@ -137,11 +135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FILLNA BY A SINGLE VALUE TO GIVE A SIGNAL\n",
+    "# Fillna by a single value to give a signal\n",
     "\n",
     "train_df.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
     "test_df.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
